[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "orderbook"
version = "1.0.2"
description="Low Latency Implementation of Price-Time Limit Orderbook"
authors = [
  { name = "Benny Sun", email = "benny.sun@duke.edu" },
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]